# electronics-lab-notes

display/st7735S-096/: colors
ic/74lvc125a/: info  voltage
ic/lw54123/: info  pinout
ic/pcf857x/: bus  info
ic/pcf857x/pcf8574/: info  pinout
ic/pcf857x/pcf8575/: info
mcu/ch32v003f4p6/: package  voltage
mcu/ch32v003f4p6/dbg/: dnld  picorvd.uf2  pinmap
mcu/ch32v003f4p6/src/: sdk  usb
mcu/cy7c68013/: 99-fx2.rules  fx2lib  vid
mcu/cy7c68013/sigrok/: 16ch.fw  8ch.fw  dnld  pinout
mcu/rp2040/ws2812/: CMakeLists.txt  build  upload  ws2812.c  ws2812.pio
memcard/qm3-9716/: info
memory/eeprom/: spi
memory/eeprom/25c080a/: size
memory/eeprom/s25c32/: size
memory/flash/: spi
reveng/: arm  thumb
reveng/mg5340/fwbegin/: check.py  valid.py
uart/ch340/: rate
uart/ht42b534/: rate
wifi/88mw300/: github
wifi/88w8782u/: freq
wifi/88w8782u/pinout/: .qfn  avdd  avss  bt  gpio  jtag  misc  rf  sdio  serial  vdd  vldo  xtal
wifi/88w8786u/: freq  memmap  mmio  pull
wifi/88w8786u/firmware/: LICENSE
wifi/88w8786u/firmware/p45/: info
wifi/88w8786u/firmware/rtos/: legend  ptrs  reveng
wifi/88w8786u/firmware/rtos/aes/: api  block
wifi/88w8786u/firmware/rtos/api/: delay  heap  helper  loop  math  misc  print  table
wifi/88w8786u/firmware/rtos/cmd/: action
wifi/88w8786u/firmware/rtos/eeprom/: api  checksum  data  memmap
wifi/88w8786u/firmware/rtos/event/: api  func  node  ref
wifi/88w8786u/firmware/rtos/gmem/: api  bb  data  pool  pool_archive  struct
wifi/k30326/: fpc  info  marvell  test  voltage
(+430 files in other folders)
